# makeDecision-server

./: .gitignore  API.rest  README.md  deploy.txt  installation.md  pyproject.toml  requirements.txt  setup.py  test.ipynb
server/: __init__.py  config.py  helpers.py  server.py  test_correlations.py  test_descriptions.py  test_dictionaries.py  test_matrix_converter.py  test_methods.py  test_results.py  test_weights.py
server/calculations/: __init__.py  node.py  parameters.py  structure.py
server/db/: __init__.py  connection.py  database.py
server/examples/files/: fuzzy_data CSV bad1.csv  (+3 more)
server/graphs/: __init__.py  correlations.py  generate.py  graphs.py  rankings.py  weights.py
server/methods/: __init__.py  correlations.py  mcda.py  weights.py
server/models/: __init__.py  calculations.py  description.py  descriptions.py  dictionary.py  matrix.py  surveys.py
server/parsers/: __init__.py  calculation.py  locale.py  matrix.py  surveys.py
server/routes/: __init__.py  calculations.py  catch_all.py  default.py  descriptions.py  dictionary.py  files.py  graphs.py  helpers.py  matrix.py  namespaces.py  statistics.py  surveys.py
server/tests/: test_correlations.py  test_descriptions.py  test_dictionaries.py  test_matrix_converter.py  test_methods.py  test_ranking.py  test_results.py  test_visualizations.py  test_weights.py
server/utilities/: __init__.py  errors.py  files.py  interface.py  results.py  validator.py
server/utils/: __init__.py  errors.py  files.py  generator.py  validator.py
server/wrappers/: __init__.py  assessment.py  graphs.py
(+23 files in other folders)
